2003-02-04  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sodipodi.c (sodipodi_load_config): Generic method by Bryce
	(sodipodi_load_preferences): Frontend, same
	(sodipodi_load_extensions): Ditto
	(sodipodi_get_repr): Test for "extensions"
	(sodipodi_init_config): Generic method by Bryce
	(sodipodi_init_preferences): Frontend by Bryce
	(sodipodi_init_extensions): Ditto

	* src/toolbox.c (sp_toolbox_extension_create): Implemented by Bryce

	* src/extension.c: New file by Bryce Harrington

	* src/extension.h: New file by Bryce Harrington

	* src/extensions-skeleton.h: Ditto

	* src/sp-mask.c: support maskContentUnits

	* src/nodepath.c (create_curve): Do not add 50 to y (why was it here?)

	* src/sp-item-group.c (sp_group_update): Propagate only if update flag set

	* src/sp-item.c (sp_item_set): Set clippath and mask bbox
	(sp_item_update): Ditto

	* src/sp-clippath.c (sp_clippath_build): Implement
	(sp_clippath_set): Ditto, clipPathUnits attribute
	(sp_clippath_update): Ditto
	(sp_clippath_show): Use bbox if needed
	(sp_clippath_set_bbox): New method

2003-02-03  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-item.c (sp_item_release): Release mask
	(sp_item_mask_release): New handler
	(sp_item_mask_modified): Ditto
	(sp_item_set): Parse mask
	(sp_item_show): Show mask
	(sp_item_private_hide): Hide mask

	* src/display/nr-arena-item.c (nr_arena_item_invoke_render): Do masking
	(nr_arena_item_private_dispose): Release mask
	(nr_arena_item_invoke_update): Update mask
	(nr_arena_item_set_mask): New method

	* src/sp-root.c (sp_root_build): Do not check for xmlns:sodipodi to determine
	version, as this is set automatically in xml loader

	* src/slideshow.h: New file

	* src/slideshow.c: New file

2003-02-02  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-rect.c (sp_rect_set): Accept 0.0 as valid for x, y, width and height
	(sp_rect_write): Use 0.0 as default for rx, ry

	* src/rect-context.c (sp_rect_finish): Use ::write to be sure
